[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace]
members = [
    "chubby_bunny_core",
    "chubby_bunny_svg",
    "chubby_bunny_canvas_renderer",
    "chubby_bunny_playground",
    "chubby_bunny_bindgen",
    "examples/minimal_box",
    "examples/constraint_example",
    "examples/interactive_example",
    "examples/svg_example",
]

resolver = "2"