[package]
name = "chubby_bunny_bindgen"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for chubby_bunny WebAssembly bindings"
license = "MIT"
documentation = "https://docs.rs/chubby_bunny_bindgen"
homepage = "http://weissenburger.info"
repository = "https://github.com/Fluffy8unny/chubby_bunny"
categories = ["wasm", "development-tools::procedural-macro-helpers"]
keywords = ["wasm", "bindgen", "proc-macro", "webassembly", "physics"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
