[package]
name = "chubby_bunny_canvas_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
chubby_bunny_core = { version = "0.1.0", path = "../chubby_bunny_core" }
chubby_bunny_svg = { version = "0.1.0", path = "../chubby_bunny_svg" }
nalgebra = "0.35"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
