[package]
name = "chubby_bunny_canvas_renderer"
version = "0.1.1"
edition = "2021"
description = "Canvas renderer for chubby_bunny soft-body simulations"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/chubby_bunny_canvas_renderer"
homepage = "http://weissenburger.info"
repository = "https://github.com/Fluffy8unny/chubby_bunny"
categories = ["wasm", "rendering", "graphics"]
keywords = ["canvas", "renderer", "wasm", "physics", "web"]

[dependencies]
chubby_bunny_core = { version = "0.1.1", path = "../chubby_bunny_core" }
chubby_bunny_svg = { version = "0.1.1", path = "../chubby_bunny_svg" }
nalgebra = "0.35"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
