[package]
name = "chubby_bunny_core"
version = "0.1.0"
edition = "2021"
description = "Core soft-body physics primitives for chubby_bunny"
license = "MIT"
documentation = "https://docs.rs/chubby_bunny_core"
homepage = "http://weissenburger.info"
repository = "https://github.com/Fluffy8unny/chubby_bunny"
categories = ["wasm", "science"]
keywords = ["physics", "soft-body", "simulation", "wasm", "nalgebra"]

[dependencies]
nalgebra = "0.35"
itertools = "0.15"
serde = { version = "1", features = ["derive"] }
dyn-clone = "1.0"