[package]
name = "chubby_bunny_core"
version = "0.1.1"
edition = "2021"
description = "WASM compatible Soft-body physics library for 2D simulations. This library is part of the Chubby Bunny project."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/chubby_bunny_core"
homepage = "http://weissenburger.info"
repository = "https://github.com/Fluffy8unny/chubby_bunny"
categories = ["wasm", "science"]
keywords = ["physics", "soft-body", "simulation", "wasm", "nalgebra"]

[features]
default = []
profiling = ["dep:tracing"]

[dependencies]
nalgebra = "0.35"
itertools = "0.15"
serde = { version = "1", features = ["derive"] }
dyn-clone = "1.0"
tracing = { version = "0.1", optional = true }