[package]
name = "chubby_bunny_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chubby_bunny_core = { path = "../chubby_bunny_core" }
chubby_bunny_svg = { path = "../chubby_bunny_svg" }
nalgebra = "0.35"
itertools = "0.14"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Performance","console"] }