[package]
name = "chubby_bunny_playground"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chubby_bunny_core = { version = "0.1.0", path = "../chubby_bunny_core" }
chubby_bunny_svg = { version = "0.1.0", path = "../chubby_bunny_svg" }
chubby_bunny_canvas_renderer = { version = "0.1.0", path = "../chubby_bunny_canvas_renderer" }
chubby_bunny_bindgen = { version = "0.1.0", path = "../chubby_bunny_bindgen" }
nalgebra = "0.35"
itertools = "0.15"
rand = "0.10.1"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance","console"] }