[package]
name = "chubby_bunny_svg"
version = "0.1.0"
edition = "2021"

[dependencies]
chubby_bunny_core = { version = "0.1.0", path = "../chubby_bunny_core" }
nalgebra = "0.35"
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.40.1", features = ["serialize"] }
svgtypes = "0.16.1"
