[package]
name = "constraint_example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chubby_bunny_core = { version = "0.1.0", path = "../../chubby_bunny_core" }
chubby_bunny_svg = { version = "0.1.0", path = "../../chubby_bunny_svg" }
chubby_bunny_canvas_renderer = { version = "0.1.0", path = "../../chubby_bunny_canvas_renderer" }
chubby_bunny_bindgen = { version = "0.1.0", path = "../../chubby_bunny_bindgen" }
wasm-bindgen = "0.2"
nalgebra = "0.35"